# academicrecordparser

./: .gitignore  pyproject.toml  script.py  vignette.ipynb
.github/workflows/: python-package-poetry.yml
academicrecordparser/: auxs.py  io.py
academirecordparser/: auxs.py  io.py
readgsheets/: auxs.py  filters.py  io.py
templates/: education.jinja  publications.jinja  publications.md  sci-comm.jinja  teaching.jinja
tests/: test_auxs.py
