[tool.poetry]
name = "academicrecordparser"
version = "0.1.0"
description = ""
authors = ["Pablo Rodríguez Sánchez <pablo.rodriguez.sanchez@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
tabulate = "^0.9.0"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
pelican-jupyter = "^0.10.1"
pytest = "^8.3.3"


[tool.poetry.group.recommended.dependencies]
pycountry = "^24.6.1"
numpy = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
